--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -48,20 +48,20 @@
   height: 35px;
   width: 100px;
   cursor: pointer;
-  filter: drop-shadow(0  2px 2px rgba(0, 0, 0, 0.12))
-          drop-shadow(0  3px 1px rgba(0, 0, 0, 0.14))
-          drop-shadow(0  1px 5px rgba(0, 0, 0, 0.12))
-          drop-shadow(0 -1px 2px rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0 2px 2px rgba(0, 0, 0, 0.12))
+    drop-shadow(0 3px 1px rgba(0, 0, 0, 0.14))
+    drop-shadow(0 1px 5px rgba(0, 0, 0, 0.12))
+    drop-shadow(0 -1px 2px rgba(0, 0, 0, 0.1));
   transition: filter 0.125s linear, transform 0.125s linear;
   margin: auto;
 }
 
 .App div.flip-btn:hover:not(.disabled) {
   transform: scale(1.02, 1.02);
-  filter: drop-shadow(0  4px 5px rgba(0, 0, 0, 0.12))
-          drop-shadow(0  1px 10px rgba(0, 0, 0, 0.14))
-          drop-shadow(0  2px 4px rgba(0, 0, 0, 0.12))
-          drop-shadow(0 -1px 3px rgba(0, 0, 0, 0.1));
+  filter: drop-shadow(0 4px 5px rgba(0, 0, 0, 0.12))
+    drop-shadow(0 1px 10px rgba(0, 0, 0, 0.14))
+    drop-shadow(0 2px 4px rgba(0, 0, 0, 0.12))
+    drop-shadow(0 -1px 3px rgba(0, 0, 0, 0.1));
   transition: filter 0.125s linear, transform 0.125s linear;
 }
 
@@ -80,7 +80,7 @@
 .App ol li {
   display: inline-block;
   height: 20px;
-  border: 1px solid #EEE;
+  border: 1px solid #eee;
   margin-right: 4px;
 }
 
